src/components/app/app.scss
.app {
    width: 1100px;
    margin: 0 auto;
    padding: 50px 0 50px 0;
    position: relative;
    .bg-decoration {
        position: absolute;
        right: -174px;
        bottom: -70px;
        z-index: -1;
    }
}


@media (max-width: 1199px) {
    .app {
        width: 950px;
        padding: 50px 0 50px 50px;
        .bg-decoration {
            position: absolute;
            right: -53px;
            bottom: -151px;
            z-index: -1;
        }
    }
}

@media (max-width: 992px) {
    .app {
        padding: 25px 0 20px 20px;
        width: 670px;
        .bg-decoration {
            right: 0px;
            bottom: 12px;
        }
    }
}

@media (max-width: 768px) {
    .app {
        width: 500px;
    }
}

@media (max-width: 576px) {
    .app {
        width: 300px;
        &__header {
            flex-direction: column;
            align-items: center
        }
        &__menu {
            margin-top: 25px;
        }
    }
}

